--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express-rate-limit": "^7.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
-    "nodemailer": "^7.0.4"
+    "nodemailer": "^7.0.4",
+    "react-responsive": "^10.0.1"
   },
   "devDependencies": {
     "dotenv": "^16.6.1",
