--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "esbuild": "^0.25.5",
-    "framer-motion": "^12.19.2",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
+    "prettier": "^3.6.2",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
