--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -1,52 +1,80 @@
-# Node modules
+# === Node modules ===
 node_modules/
+.yarn/*
+.pnp.*
+.yarnrc.yml
 
-# Logs
-logs
-*.log
+# === Logs ===
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+log/
+logs/
 
-# Environment variables
-.env
-.env.*  # For multiple env files like .env.production
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# Coverage directories
-coverage/
-.nyc_output/
-
-# Build output
+# === Build output ===
 dist/
 build/
+.next/
+out/
+coverage/
 
-# Docker files
-docker-compose.override.yml
+# === React/Vite specific ===
+*.local
+*.cache
+.vite
 
-# IDEs and editors
-.vscode/
+# === Environment Variables ===
+.env
+.env.*.local
+.env.local
+.env.development
+.env.production
+.env.test
+
+# === OS and IDEs ===
+.DS_Store
+Thumbs.db
 .idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+.vscode/
+*.swp
 
-# Test output
+# === Testing ===
+coverage/
+*.lcov
 jest-html-reporters-*.html
+test-results/
 
-# Optional: PM2 logs
-pm2.log
-ecosystem.config.js
+# === Misc ===
+*.log
+*.pid
+*.seed
+*.tgz
+*.sqlite
+*.db
+*.db-wal
+*.db-shm
+*.pem
 
-# Optional: MongoDB local data dump
+# === Frontend specific ===
+client/.next/
+client/node_modules/
+client/build/
+client/.env
+client/.env.local
+
+# === Backend specific ===
+server/node_modules/
+server/dist/
+server/build/
+server/.env
+server/.env.local
+
+# === MongoDB (local db files) ===
 dump/
+
+# === Yarn Berry Cache ===
+.yarn/cache/
+.yarn/unplugged/
+.yarn/build-state.yml
+.yarn/install-state.gz
