--- a/client/package.json
+++ b/client/package.json
@@ -16,13 +16,14 @@
     "clsx": "^2.1.1",
     "esbuild": "^0.25.5",
     "framer-motion": "^12.23.12",
-    "lucide-react": "^0.525.0",
+    "lucide-react": "^0.542.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
@@ -35,6 +36,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tw-animate-css": "^1.3.7",
     "vite": "^6.3.5"
   }
 }
