--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
     "esbuild": "^0.25.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
