--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "esbuild": "^0.25.5",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "prettier": "^3.6.2",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
@@ -28,6 +29,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
     "recharts": "2.15.4",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.8"
